backend/build_error.txt
cargo :     Checking 
scantix-backend 
v0.1.0 (C:\Users\sahil
\OneDrive\Desktop\Scan
Tix55\ScanTix\backend)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -FilePath 
build_error.txt 
-Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng sc...canTix\ba    
ckend):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
error[E0382]: use of 
moved value: 
`data.event_title`
   --> src\handlers\ti
ckets.rs:347:22
    |
331 |         
event_title: Some(data
.event_title),
    |                 
          
---------------- 
value moved here
...
347 |         
event_title: 
data.event_title,
    |                 
     ^^^^^^^^^^^^^^^^ 
value used here after 
move
    |
    = note: move 
occurs because 
`data.event_title` 
has type `std::string:
:String`, which does 
not implement the 
`Copy` trait

warning: unused 
variable: 
`existing_count`
  --> src\handlers\tic
kets.rs:53:13
   |
53 |         let 
existing_count = sqlx:
:query_scalar::<_, 
i64>(
   |             
^^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_existing_count`
   |
   = note: `#[warn(unu
sed_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

For more information 
about this error, try 
`rustc --explain 
E0382`.
warning: 
`scantix-backend` 
(bin 
"scantix-backend") 
generated 1 warning
error: could not 
compile 
`scantix-backend` 
(bin 
"scantix-backend") 
due to 1 previous 
error; 1 warning 
emitted
